DBZ-8054 Workaround bug with ISPN and toList() collection